serverless-storage: reject legacy snapshot against serverless-storage indices (§7.1.1)
Decides the RFC's own open policy question: legacy snapshot to a
non-serverless repository is never allowed on a serverless-storage-enabled
index, regardless of target repository. Classic snapshot/restore assumes a
pinnable local Lucene commit, which this plugin's shard model breaks (lazy
reader materialization, suspend-to-zero), and would otherwise duplicate the
plugin's own credential-scoped PITR/clone mechanism with an ungoverned
second backup path. New ServerlessStorageLegacySnapshotActionFilter vetoes
CreateSnapshotAction requests after real wildcard/alias resolution.